Replace all `ChunkedEncoder` implementations with more efficient direct implementations of `Publisher<>`